--- a/css/styles.css
+++ b/css/styles.css
@@ -22,10 +22,12 @@ main {
 }
 
 h1 {
+    max-width: 45rem;
     font-size: 4rem;
     margin: 4rem 0;
     text-align: center;
     font-family: 'Jost', sans-serif;
+    font-size: 4rem;
     color: #ffc629;
 }
 
@@ -37,7 +39,7 @@ section {
 
 .album-group {
     padding: 1.8rem;
-    gap: 1rem;
+    gap: 1.6rem;
     border-radius: 1rem;
     max-width: 90rem;
     display: flex;
@@ -57,5 +59,7 @@ section {
 }
 
 .album-group p {
+    width: 100%;
     font-size: 2.8rem;
+    white-space: normal;
 }
