--- a/css/styles.css
+++ b/css/styles.css
@@ -2,64 +2,64 @@
 @import 'reset.css';
 
 body {
-    font-family: 'Quicksand', sans-serif;
-    padding-bottom: 6rem;
-    background-color: #0b0b0b;
-    opacity: 0.8;
-    background-image:  linear-gradient(30deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(150deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(30deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(150deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(60deg, #02020277 25%, transparent 25.5%, transparent 75%, #02020277 75%, #02020277), linear-gradient(60deg, #02020277 25%, transparent 25.5%, transparent 75%, #02020277 75%, #02020277);
-    background-size: 20px 35px;
-    background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
-    color: white;
+  font-family: 'Montserrat', sans-serif;
+  padding-bottom: 6rem;
+  background-color: #0b0b0b;
+  opacity: 0.8;
+  background-image:  linear-gradient(30deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(150deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(30deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(150deg, #020202 12%, transparent 12.5%, transparent 87%, #020202 87.5%, #020202), linear-gradient(60deg, #02020277 25%, transparent 25.5%, transparent 75%, #02020277 75%, #02020277), linear-gradient(60deg, #02020277 25%, transparent 25.5%, transparent 75%, #02020277 75%, #02020277);
+  background-size: 20px 35px;
+  background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
+  color: white;
 }
 
 main {
-    width: 100%;
-    max-width: 100rem;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-    max-width: 45rem;
-    font-size: 4rem;
-    margin: 4rem 0;
-    text-align: center;
-    font-family: 'Jost', sans-serif;
-    font-size: 4rem;
-    color: #ffc629;
+  max-width: 60rem;
+  font-size: 4rem;
+  margin: 4rem 0;
+  text-align: center;
+  font-family: 'Jost', sans-serif;
+  font-size: 4rem;
+  color: #ffc629;
 }
 
 section {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
 .album-group {
-    padding: 1.8rem;
-    gap: 1.6rem;
-    border-radius: 1rem;
-    max-width: 90rem;
-    display: flex;
-    align-items: flex-end;
-    transition: .2s;
-    cursor: pointer;
+  padding: 1.8rem;
+  gap: 1.6rem;
+  border-radius: 1rem;
+  max-width: 110rem;
+  display: flex;
+  align-items: flex-end;
+  transition: .2s;
+  cursor: pointer;
 }
 
 .album-group:hover {
-    background-color: #181818;
-    transform: translateY(-1.4rem);
+  background-color: #181818;
+  transform: translateY(-1.4rem);
 }
 
 .album-group img {
-    width: 15rem;
-    border-radius: .5rem;
+  width: 15rem;
+  border-radius: .5rem;
 }
 
 .album-group p {
-    width: 100%;
-    font-size: 2.8rem;
-    white-space: normal;
+  width: 100%;
+  font-size: 2.8rem;
+  font-weight: 600;
+  white-space: normal;
 }
