--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,13 @@ main {
 }
 
 h1 {
-  max-width: 60rem;
-  font-size: 4rem;
-  margin: 4rem 0;
+  width: 100%;
+  font-size: 5rem;
+  margin: 8rem 0;
   text-align: center;
+  font-weight: 500;
+  text-transform: uppercase;
   font-family: 'Jost', sans-serif;
-  font-size: 4rem;
   color: #ffc629;
 }
 
